tunegfs2: Add support for fs format versions
Add a new -r option to change sb_fs_format.  Only increasing the number
is supported. New tests added.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/tune/Makefile.am
+++ b/gfs2/tune/Makefile.am
@@ -10,10 +10,11 @@ tunegfs2_SOURCES = \
 tunegfs2_CPPFLAGS = \
 	-D_FILE_OFFSET_BITS=64 \
 	-I$(top_srcdir)/gfs2/include \
-	-I$(top_srcdir)/group/include
+	-I$(top_srcdir)/gfs2/libgfs2
 tunegfs2_CFLAGS = \
 	$(uuid_CFLAGS)
 tunegfs2_LDADD = \
+	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
 	$(uuid_LIBS)
 
 if HAVE_CHECK
