configure: Don't define _FORTIFY_SOURCE for gcov builds
Coverage instrumentation requires optimisation to be disabled and
_FORTIFY_SOURCE requires optimisation to be enabled, so they are
incompatible.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -182,6 +182,7 @@ if test "x${enable_gcov}" = xyes; then
 		enable_debug="no (gcov enabled)"
 	fi
 	OPT_CFLAGS="-O0 $GCOV_CFLAGS"
+	OPT_CPPFLAGS=""
 fi
 
 if test "x${enable_gprof}" = xyes; then
