libgfs2: Avoid potential gfs/gfs2 superblock update clash
gfs1's sb_jindex_di field is at the same offset as gfs2's sb_master_dir.
Writing both in lgfs2_sb_out() means that one can overwrite the other
when the values are different. To avoid that possibility, make them a
union and add unit tests that cover this scenario.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/libgfs2/checks.am
+++ b/gfs2/libgfs2/checks.am
@@ -7,7 +7,7 @@ check_libgfs2_SOURCES = \
 	rgrp.c check_rgrp.c \
 	crc32c.c \
 	gfs2_disk_hash.c \
-	ondisk.c \
+	ondisk.c check_ondisk.c \
 	buf.c \
 	device_geometry.c \
 	fs_ops.c \
