libgfs2: Move struct printing functions out of libgfs2
Now that libgfs2 itself doesn't use these functions, they can be moved
into the two utils that use them. This does duplicate the code but that
means the utils are free to change the way that they're printed to suit
their interfaces. We're still using the "print_it" extern that libgfs2.h
requires but that can be removed next.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/edit/Makefile.am
+++ b/gfs2/edit/Makefile.am
@@ -6,6 +6,7 @@ noinst_HEADERS = \
 	gfs2hex.h \
 	hexedit.h \
 	extended.h \
+	struct_print.h \
 	journal.h
 
 gfs2_edit_SOURCES = \
@@ -13,6 +14,7 @@ gfs2_edit_SOURCES = \
 	hexedit.c \
 	savemeta.c \
 	extended.c \
+	struct_print.c \
 	journal.c
 
 gfs2_edit_CPPFLAGS = \
