--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -7,8 +7,7 @@ EXTRA_DIST = \
 	$(TESTSUITE_AT) \
 	$(TESTSCRIPTS) \
 	package.m4 \
-	atlocal \
-	atconfig
+	atlocal.in
 
 DISTCLEANFILES = \
 	atlocal \
