tests: Add an option to clean up the testvol file unconditionally
Failed tests skip cleanup, so if the final test doesn't remove the
testvol then it is left around in the test environment. For CI we want
to remove it so provide a --always-clean-testvol option which cleans up
unconditionally in an EXIT trap routine.

This can be used via 'make check TOPTS=--always-clean-testvol'

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/tests/atlocal.in
+++ b/tests/atlocal.in
@@ -6,3 +6,12 @@ gfs_max_blocks()
 {
 	printf $((GFS_TGT_SZ*1073741824/$1))
 }
+
+gfs_tgt_cleanup()
+{
+	if $1; then
+		rm -f $GFS_TGT
+	fi
+}
+
+trap 'gfs_tgt_cleanup $at_arg_always_clean_testvol' EXIT
