Add LTLIBINTL to LDADD where needed
In environments that require explicit linking to libintl, $(LTLIBINTL)
expands to the appropriate library.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/gfs2/fsck/Makefile.am
+++ b/gfs2/fsck/Makefile.am
@@ -38,6 +38,7 @@ fsck_gfs2_CPPFLAGS = \
 
 fsck_gfs2_LDADD = \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
+	$(LTLIBINTL) \
 	$(uuid_LIBS)
 
 if HAVE_CHECK
