--- a/gfs2/mkfs/Makefile.am
+++ b/gfs2/mkfs/Makefile.am
@@ -29,6 +29,7 @@ mkfs_gfs2_CFLAGS = \
 	$(uuid_CFLAGS)
 mkfs_gfs2_LDADD	= \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
+	$(LTLIBINTL) \
 	$(blkid_LIBS) \
 	$(uuid_LIBS)
 
@@ -40,6 +41,7 @@ gfs2_grow_CPPFLAGS = $(COMMON_CPPFLAGS)
 gfs2_grow_CFLAGS = $(blkid_CFLAGS)
 gfs2_grow_LDADD = \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
+	$(LTLIBINTL) \
 	$(blkid_LIBS) \
 	$(uuid_LIBS)
 
@@ -50,6 +52,7 @@ gfs2_jadd_SOURCES = \
 gfs2_jadd_CPPFLAGS = $(COMMON_CPPFLAGS)
 gfs2_jadd_LDADD = \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
+	$(LTLIBINTL) \
 	$(uuid_LIBS)
 
 if HAVE_CHECK
