--- a/configure.ac
+++ b/configure.ac
@@ -53,7 +53,8 @@ if ! ${MAKE-make} --version /cannot/make/this >/dev/null 2>&1; then
 fi
 
 AC_PROG_CC
-AC_PROG_CC_C99
+# Autoconf 2.70 obsoletes AC_PROG_CC_C99 but we still care about older distros
+m4_version_prereq([2.70],[],[AC_PROG_CC_C99])
 if test "x$ac_cv_prog_cc_c99" = "xno"; then
 	AC_MSG_ERROR(["C99 support is required"])
 fi
