--- a/Makefile.am
+++ b/Makefile.am
@@ -33,3 +33,25 @@ SUBDIRS = \
 
 maintainer-clean-local:
 	rm -rf m4
+
+RPMSPEC = tests/gfs2-utils.spec
+GITVERSION := \
+	$(shell git describe --dirty 2>/dev/null | grep - | cut -d- -f2- | tr - .)
+RPMRELEASE = $(or $(GITVERSION), "0")
+
+$(RPMSPEC): $(RPMSPEC).in $(top_builddir)/config.status
+	cd $(top_builddir) && ./config.status $@
+
+RPMBUILDDIR = "$(abs_builddir)/rpmbuild"
+RPMBUILDOPTS = \
+	--buildroot $(RPMBUILDDIR)/buildroot \
+	--define "_sourcedir $(abs_builddir)" \
+	--define "_specdir $(abs_builddir)" \
+	--define "_builddir $(abs_builddir)" \
+	--define "_srcrpmdir $(RPMBUILDDIR)" \
+	--define "_rpmdir $(RPMBUILDDIR)" \
+	--define "rpmrelease $(RPMRELEASE)"
+
+rpm: $(RPMSPEC)
+	mkdir -p $(RPMBUILDDIR)
+	rpmbuild $(RPMBUILDOPTS) -bb $(RPMSPEC)
