--- a/gfs2/glocktop/Makefile.am
+++ b/gfs2/glocktop/Makefile.am
@@ -7,9 +7,11 @@ glocktop_SOURCES = \
 	glocktop.c
 
 glocktop_CFLAGS = \
+	$(AM_CFLAGS) \
 	$(ncurses_CFLAGS)
 
 glocktop_CPPFLAGS = \
+	$(AM_CPPFLAGS) \
 	-D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE \
 	-D_GNU_SOURCE \
