--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,10 +22,12 @@ noinst_PROGRAMS = nukerg
 
 nukerg_SOURCES = nukerg.c
 nukerg_CPPFLAGS = \
+	$(AM_CPPFLAGS) \
 	-D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE \
 	-D_GNU_SOURCE
 nukerg_CFLAGS = \
+	$(AM_CFLAGS) \
 	-I$(top_srcdir)/gfs2/libgfs2 \
 	-I$(top_srcdir)/gfs2/include
 nukerg_LDADD = \
