--- a/gfs2/libgfs2/Makefile.am
+++ b/gfs2/libgfs2/Makefile.am
@@ -12,7 +12,7 @@ BUILT_SOURCES = \
 
 AM_LFLAGS = --header-file=lexer.h
 AM_YFLAGS = -d
-AM_CPPFLAGS = \
+AM_CPPFLAGS += \
 	-D_FILE_OFFSET_BITS=64 \
 	-D_LARGEFILE64_SOURCE \
 	-D_GNU_SOURCE \
