--- a/gfs2/edit/Makefile.am
+++ b/gfs2/edit/Makefile.am
@@ -17,12 +17,7 @@ gfs2_edit_SOURCES = \
 	struct_print.c \
 	journal.c
 
-gfs2_edit_CPPFLAGS = \
-	$(AM_CPPFLAGS) \
-	-D_FILE_OFFSET_BITS=64 \
-	-I$(top_srcdir)/gfs2/include \
-	-I$(top_srcdir)/gfs2/libgfs2
-
+gfs2_edit_CPPFLAGS = $(AM_CPPFLAGS)
 gfs2_edit_CFLAGS = \
 	$(AM_CFLAGS) \
 	$(ncurses_CFLAGS) \
