--- a/gfs2/tune/Makefile.am
+++ b/gfs2/tune/Makefile.am
@@ -7,11 +7,7 @@ noinst_HEADERS = tunegfs2.h
 tunegfs2_SOURCES = \
 	main.c \
 	super.c
-tunegfs2_CPPFLAGS = \
-	$(AM_CPPFLAGS) \
-	-D_FILE_OFFSET_BITS=64 \
-	-I$(top_srcdir)/gfs2/include \
-	-I$(top_srcdir)/gfs2/libgfs2
+tunegfs2_CPPFLAGS = $(AM_CPPFLAGS)
 tunegfs2_CFLAGS = \
 	$(AM_CFLAGS) \
 	$(uuid_CFLAGS)
