--- a/gfs2/convert/Makefile.am
+++ b/gfs2/convert/Makefile.am
@@ -2,12 +2,7 @@ MAINTAINERCLEANFILES = Makefile.in
 
 sbin_PROGRAMS = gfs2_convert
 
-gfs2_convert_CPPFLAGS = \
-	$(AM_CPPFLAGS) \
-	-D_FILE_OFFSET_BITS=64 \
-	-I$(top_srcdir)/gfs2/include \
-	-I$(top_srcdir)/gfs2/libgfs2
-
+gfs2_convert_CPPFLAGS = $(AM_CPPFLAGS)
 gfs2_convert_CFLAGS = $(AM_CFLAGS)
 gfs2_convert_LDADD = \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
