--- a/gfs2/glocktop/Makefile.am
+++ b/gfs2/glocktop/Makefile.am
@@ -12,11 +12,7 @@ glocktop_CFLAGS = \
 
 glocktop_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
-	-D_FILE_OFFSET_BITS=64 \
-	-D_LARGEFILE64_SOURCE \
-	-D_GNU_SOURCE \
-	-I$(top_srcdir)/gfs2/include \
-	-I$(top_srcdir)/gfs2/libgfs2
+	-D_GNU_SOURCE
 
 glocktop_LDADD = \
 	$(top_builddir)/gfs2/libgfs2/libgfs2.la \
