--- a/gfs2/mkfs/Makefile.am
+++ b/gfs2/mkfs/Makefile.am
@@ -2,11 +2,7 @@ MAINTAINERCLEANFILES = Makefile.in
 
 COMMON_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
-	-D_FILE_OFFSET_BITS=64 \
-	-D_LARGEFILE64_SOURCE \
-	-D_GNU_SOURCE \
-	-I$(top_srcdir)/gfs2/include \
-	-I$(top_srcdir)/gfs2/libgfs2
+	-D_GNU_SOURCE
 
 sbin_PROGRAMS = \
 	mkfs.gfs2 \
