make rpm: Don't use rpmbuild --buildroot
This rpmbuild option is deprecated. Meanwhile, --build-in-place has been
recently fixed so we can use that instead. It requires the %setup macro
to be used in the spec.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,7 +44,6 @@ $(RPMSPEC): $(RPMSPEC).in $(top_builddir)/config.status
 
 RPMBUILDDIR = "$(abs_builddir)/rpmbuild"
 RPMBUILDOPTS = \
-	--buildroot $(RPMBUILDDIR)/buildroot \
 	--define "_sourcedir $(abs_builddir)" \
 	--define "_specdir $(abs_builddir)" \
 	--define "_builddir $(abs_builddir)" \
@@ -54,4 +53,4 @@ RPMBUILDOPTS = \
 
 rpm: $(RPMSPEC)
 	mkdir -p $(RPMBUILDDIR)
-	rpmbuild $(RPMBUILDOPTS) -bb $(RPMSPEC)
+	rpmbuild $(RPMBUILDOPTS) --build-in-place -bb $(RPMSPEC)
