--- a/tests/gfs2-utils.spec.in
+++ b/tests/gfs2-utils.spec.in
@@ -23,6 +23,9 @@ BuildRequires: check-devel
 Source: https://releases.pagure.org/gfs2-utils/gfs2-utils-%{version}.tar.gz
 URL: https://pagure.io/gfs2-utils
 
+%prep
+%setup
+
 %build
 ./configure
 make clean
