make rpm: Don't install to /usr/sbin unconditionally
Fedora's merge of /usr/sbin into /usr/bin breaks 'make rpm' as it now
expects everything to be installed to /usr/bin at the end but we're
installing into /usr/sbin. Switch to using the configure macro which
sets all of the path variables for us, and update some hardcoded paths
in the spec file.

Signed-off-by: Andrew Price <anprice@redhat.com>

--- a/tests/gfs2-utils.spec.in
+++ b/tests/gfs2-utils.spec.in
@@ -27,14 +27,14 @@ URL: https://pagure.io/gfs2-utils
 %setup
 
 %build
-./configure
+%configure
 make clean
 make %{_smp_mflags} V=1
 
 %install
 make -C gfs2 install DESTDIR=%{buildroot}
-rm -f %{buildroot}/usr/sbin/gfs2_trace
-rm -f %{buildroot}/usr/sbin/gfs2_lockcapture
+rm -f '%{buildroot}%{_sbindir}/gfs2_trace'
+rm -f '%{buildroot}%{_sbindir}/gfs2_lockcapture'
 
 %description
 gfs2-utils test rpm
